--- a/templates/jobSeekerInfo.html
+++ b/templates/jobSeekerInfo.html
@@ -8,6 +8,38 @@ Job Seeker Information
 {% block body_block %}
 
 <style>
+    .list-group-item {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    .delete-application {
+        padding: 5px 10px;
+        border: 1px solid red;
+        color: red;
+        cursor: pointer;
+        border-radius: 5px;
+    }
+
+    .delete-application:hover {
+        background-color: red;
+        color: white;
+    }
+
+    .text-decoration-none {
+        text-decoration: none;
+    }
+
+    .flex-grow-1 {
+        flex-grow: 1;
+    }
+
+    .ms-auto {
+        margin-left: auto;
+    }
+
+
     .bd-sidebar {
         height: 60vh;
         overflow-y: auto;
@@ -158,6 +190,8 @@ Job Seeker Information
 <script type="text/javascript">
     //获取没有 job_id 的 URL
     var jobDetailBaseUrl = "{% url 'job_detail' job_id=0 %}".replace('/0/', '/');
+    var deleteApplicationUrlTemplate = '{% url "delete_application" application_id=0 %}'.replace('/0/', '/');
+    var deleteFeedbackUrlTemplate = '{% url "delete_feedback" feedback_id=0 %}'.replace('/0/', '/');
     var allreviews = [];
 
     function handleSubmitChangePassword() {
@@ -240,15 +274,16 @@ Job Seeker Information
                     var statusBadge = getStatusBadge(app.status);
                     var jobDetailUrl = jobDetailBaseUrl + app.job_id + '/';
                     return `
-                    <a href="${jobDetailUrl}" class="list-group-item list-group-item-action">
-                        <div class="d-flex w-100 justify-content-between my-2">
-                            <h5 class="mb-1 text-primary">${app.job__title}</h5>
-                            <span>
-                                ${statusBadge}
+                    <div class="list-group-item list-group-item-action d-flex align-items-center py-3" aria-current="true">
+                            <div class="flex-grow-1">
+                                <a href="${jobDetailUrl}" class="text-decoration-none">
+                                    <h5 class="mb-1 text-primary">${app.job__title}</h5>
+                                </a>
+                                <span>${statusBadge}</span>
                                 <small> | ${formattedDate}</small>
-                            </span>
+                            </div>
+                            ${app.status != 1 ? `<div class="ms-auto"><span class="delete-application" data-application-id="${app.id}">Delete</span></div>` : ''}
                         </div>
-                    </a>
                     `;
                 }).join('');
 
@@ -270,15 +305,22 @@ Job Seeker Information
             response.feedbacks.forEach(function (feedback) {
                 var jobDetailUrl = jobDetailBaseUrl + feedback.job_id + '/';
                 feedbacksHtml += `
-                        <a href="${jobDetailUrl}" class="list-group-item list-group-item-action">
-                            <div class="d-flex w-100 justify-content-between my-2">
-                                <h5 class="mb-1 text-primary">${feedback.job__title}</h5>
-                                <small>Rated: ${feedback.rate}/5</small>
-                            </div>
-                            <p class="mb-1">Comment: ${feedback.comment}</p>
-                            <p class="mb-1">Date: ${new Date(feedback.date).toLocaleDateString()}</p>
+                <div class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">
+                    <div class="d-flex flex-column">
+                        <a href="${jobDetailUrl}" class="text-decoration-none">
+                            <h5 class="mb-1 text-primary">${feedback.job__title}</h5>
                         </a>
-                    `;
+                        <div>${feedback.rate}/5 Stars</div>
+                    </div>
+                    <div class="flex-grow-1 d-flex justify-content-center">
+                        <p class="mb-1 text-truncate">${feedback.comment.length > 20 ? feedback.comment.substring(0, 20) + '...' : feedback.comment}</p>
+                    </div>
+                    <div class="d-flex align-items-center">
+                        <small class="me-2">${new Date(feedback.date).toLocaleDateString()}</small>
+                        <span class="delete-feedback" data-feedback-id="${feedback.id}" style="cursor: pointer; color: red; border: 1px solid red; padding: 2px 5px; border-radius: 5px;">Delete</span>
+                    </div>
+                </div>
+                `;
             });
             $('#userFeedbacks').html(feedbacksHtml);
         },
@@ -307,7 +349,7 @@ Job Seeker Information
                 contentType: 'application/json',
                 data: JSON.stringify(formData),
                 beforeSend: function(xhr) {
-                    xhr.setRequestHeader("X-CSRFToken", "{{ csrf_token }}"); // 添加CSRF令牌
+                    xhr.setRequestHeader("X-CSRFToken", "{{ csrf_token }}");
                 },
                 success: function(response) {
                     alert("User information updated successfully");
@@ -325,7 +367,6 @@ Job Seeker Information
     $('#applicationStatusFilter').on('change', function() {
         var selectedStatus = $(this).val();
         filterApplications(selectedStatus);
-        console.log(selectedStatus)
     });
 
     function filterApplications(status) {
@@ -347,15 +388,16 @@ Job Seeker Information
                         var statusBadge = getStatusBadge(app.status);
                         var jobDetailUrl = jobDetailBaseUrl + app.job_id + '/';
                         return `
-                        <a href="${jobDetailUrl}" class="list-group-item list-group-item-action">
-                            <div class="d-flex w-100 justify-content-between my-2">
-                                <h5 class="mb-1 text-primary">${app.job__title}</h5>
-                                <span>
-                                    ${statusBadge}
-                                    <small> | ${formattedDate}</small>
-                                </span>
+                        <div class="list-group-item list-group-item-action d-flex align-items-center py-3" aria-current="true">
+                            <div class="flex-grow-1">
+                                <a href="${jobDetailUrl}" class="text-decoration-none">
+                                    <h5 class="mb-1 text-primary">${app.job__title}</h5>
+                                </a>
+                                <span>${statusBadge}</span>
+                                <small> | ${formattedDate}</small>
                             </div>
-                        </a>
+                            ${app.status != 1 ? `<div class="ms-auto"><span class="delete-application" data-application-id="${app.id}">Delete</span></div>` : ''}
+                        </div>
                         `;
                     }
                 }).join('');
@@ -366,6 +408,52 @@ Job Seeker Information
             }
         });
     }
+
+    $(document).on('click', '.delete-application', function() {
+    var applicationId = $(this).data('application-id');
+    var deleteUrl = deleteApplicationUrlTemplate + applicationId + '/';
+    if (confirm('Are you sure you want to delete this application?')) {
+        $.ajax({
+            url: deleteUrl,
+            type: 'DELETE',
+            dataType: 'json',
+            beforeSend: function(xhr) {
+                xhr.setRequestHeader('X-CSRFToken', '{{ csrf_token }}');
+            },
+            success: function(response) {
+                alert(response.message);
+                location.reload();
+            },
+            error: function(xhr, status, error) {
+                alert('Failed to delete application.');
+            }
+        });
+    }
+});
+
+
+$(document).on('click', '.delete-feedback', function() {
+    var feedbackId = $(this).data('feedback-id');
+    var deleteUrl = deleteFeedbackUrlTemplate + feedbackId + '/';
+    if (confirm('Are you sure you want to delete this feedback?')) {
+        $.ajax({
+            url: deleteUrl,
+            type: 'DELETE',
+            dataType: 'json',
+            beforeSend: function(xhr) {
+                xhr.setRequestHeader('X-CSRFToken', '{{ csrf_token }}');
+            },
+            success: function(response) {
+                alert('Feedback deleted successfully');
+                location.reload();
+            },
+            error: function(xhr, status, error) {
+                alert('Failed to delete feedback');
+            }
+        });
+    }
+});
+
 </script>
 
 
