--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,8 @@
+
 <!DOCTYPE html>
 
 {% extends "base.html" %}
+{% load static %}
 {% block title_block %}Home{% endblock %}
 <html lang="en">
 <body>
@@ -34,7 +36,9 @@
             }
 
             .job {
-                justify-content: center;
+                width:1000px;
+                display:flex;
+                justify-content: space-between;
                 border: 1px solid #dcdcdc;
                 margin-block: 10px 10px;
                 padding: 20px;
@@ -45,6 +49,7 @@
                 text-overflow: ellipsis; 
                 background-color: rgba(255, 255, 255, 0.5); 
                 backdrop-filter: blur(10px);
+                align-items:stretch;
             }
 
             .job-link {
@@ -60,10 +65,25 @@
             }
 
             .job-details {
-                display: flex;
+                flex:1;
                 justify-content: space-between;
                 flex-wrap: wrap;
-                padding-right: 10%;
+                padding-right: 10px;
+            }
+            .job-image{
+                flex:50%;
+                display:flex;
+                height:300px;
+                justify-content:center;
+                align-items:center;
+                max-width:50%;
+                overflow:hidden;
+            }
+            .job-image img{
+                max-width:100%;
+                max-height:100%;
+                height:auto;
+                object-fit:contain;
             }
         </style>
 
@@ -165,27 +185,59 @@
 
 
                 
-                {% for job in jobs %}
-                <div class="col-10 job" data-location="{{ job.city }}" data-industry="{{ job.get_industry_display }}" data-jobtype="{{ job.get_type_display }}" data-education="{{ job.get_requirement_display }}" data-remote="{{ job.get_remote_display }}" data-salary="{{ job.salary }}">
-                    <a href="{% url 'job_detail' job_id=job.id %}" class="job-link">    
+<!--                {% for job in jobs %}-->
+<!--                <div class="col-10 job" data-location="{{ job.city }}" data-industry="{{ job.get_industry_display }}" data-jobtype="{{ job.get_type_display }}" data-education="{{ job.get_requirement_display }}" data-remote="{{ job.get_remote_display }}" data-salary="{{ job.salary }}">-->
+<!--                    <a href="{% url 'job_detail' job_id=job.id %}" class="job-link">    -->
 
-                        <div>
-                            <h3>{{ job.title }}</h3>
-                            <p>{{ job.employer }}</p>
-                            <div class="job-details">
-                                <p><b>Salary:</b> £{{ job.salary }} per hour</p>
-                                <p><b>Remote: </b>{{ job.get_remote_display }}</p>
-                                <p><b>Job Type: </b>{{ job.get_type_display }}</p>
-                                <p><b>Location: </b>{{ job.city }}</p>
-                            </div>
-                            <p><b>Education Level Requirement:</b> {{ job.get_requirement_display }}</p>
-                            <p><b>Duration:</b> {{ job.start_date|date:"d M Y"}} - {{ job.end_date|date:"d M Y" }}</p>
-                            <p><b>Other Information: </b> {{job.other}}</p>
-                        </div>
-                    </a>
-                </div>
-                    
-                {% endfor %}
+<!--                        <div>-->
+<!--                            <h3>{{ job.title }}</h3>-->
+<!--                            <p>{{ job.employer }}</p>-->
+<!--                            <div class="job-details">-->
+<!--                                <p><b>Salary:</b> £{{ job.salary }} per hour</p>-->
+<!--                                <p><b>Remote: </b>{{ job.get_remote_display }}</p>-->
+<!--                                <p><b>Job Type: </b>{{ job.get_type_display }}</p>-->
+<!--                                <p><b>Location: </b>{{ job.city }}</p>-->
+<!--                            </div>-->
+<!--                            <p><b>Education Level Requirement:</b> {{ job.get_requirement_display }}</p>-->
+<!--                            <p><b>Duration:</b> {{ job.start_date|date:"d M Y"}} - {{ job.end_date|date:"d M Y" }}</p>-->
+<!--                            <p><b>Other Information: </b> {{job.other}}</p>-->
+<!--                        </div>-->
+<!--                    </a>-->
+<!--                    <div class="job-image">-->
+<!--                        {% if job.avatar %}-->
+<!--                            <img src="{{ job.avatar }}" alt="{{ job.title }}" style="width: 100px; height: 100px;">-->
+<!--                        {% else %}-->
+<!--                            <img src="{% static 'image/default-job.jpg' %}" alt="Default Job Image" style="width: 100px; height: 100px;">-->
+<!--                        {% endif %}-->
+<!--                    </div>-->
+<!--         job d-flex justify-content-between align-items-end mb-4       </div>-->
+<!--                {% endfor %}-->
+{% for job in jobs %}
+<div class="col-10 job" data-location="{{ job.city }}" data-industry="{{ job.get_industry_display }}" data-jobtype="{{ job.get_type_display }}" data-education="{{ job.get_requirement_display }}" data-remote="{{ job.get_remote_display }}" data-salary="{{ job.salary }}">
+    <a href="{% url 'job_detail' job_id=job.id %}" class="job-link flex-grow-1">
+        <div>
+            <h3>{{ job.title }}</h3>
+            <p>{{ job.employer }}</p>
+            <div class="job-details">
+                <p><b>Salary:</b> £{{ job.salary }} per hour</p>
+                <p><b>Remote:</b> {{ job.get_remote_display }}</p>
+                <p><b>Job Type:</b> {{ job.get_type_display }}</p>
+                <p><b>Location:</b> {{ job.city }}</p>
+                <p><b>Education Level Requirement:</b> {{ job.get_requirement_display }}</p>
+                <p><b>Duration:</b> {{ job.start_date|date:"d M Y"}} - {{ job.end_date|date:"d M Y" }}</p>
+                <p><b>Other Information:</b> {{ job.other }}</p>
+            </div>
+        </div>
+    </a>
+    <div class="job-image">
+        {% if job.avatar %}
+            <img src="{{ job.avatar }}" alt="{{ job.title }}">
+        {% else %}
+            <img src="{% static 'image/default-job.jpg' %}" alt="Default Job Image">
+        {% endif %}
+    </div>
+</div>
+{% endfor %}
 
 
             
@@ -285,13 +337,16 @@
                 const category = target.closest('.dropdown').dataset.category;
 
                 if (filterType === 'filter') {
+                    console.log(filterType);
+                    console.log(category);
+                    console.log(filters);
                     // Update the filters object for the selected category
                     if (filterOption === 'All') {
                         delete filters[category];
                     } else {
                         filters[category] = filterOption;
                     }
-
+                    console.log(filters);
                     // Filter jobs based on all selected filters
                     filterJobs();
                 } else if (filterType === 'sort') {
@@ -303,23 +358,21 @@
     </script>
 
     
-    
-    <script>
-        $(document).ready(function () {
-             // Make an AJAX request to fetch all jobs
-            $.ajax({
-                url: "{% url 'index' %}",
-                method: "GET",
-                dataType: "json",
-                success: function (response) {
-                    $(".job-listing .row").html(response);
-                },
-                error: function (error) {
-                    console.error("Error fetching jobs:", error);
-                }
-            });
-        });
-    </script>
+<!--    <script>-->
+<!--        $(document).ready(function () {-->
+<!--            $.ajax({-->
+<!--                url: "{% url 'index' %}",-->
+<!--                method: "GET",-->
+<!--                dataType: "json",-->
+<!--                success: function (response) {-->
+<!--                    $(".job-listing .row").html(response);-->
+<!--                },-->
+<!--                error: function (error) {-->
+<!--                    console.error("Error fetching jobs:", error);-->
+<!--                }-->
+<!--            });-->
+<!--        });-->
+<!--    </script>-->
 
     {% endblock %}
 
