--- a/templates/job-detail.html
+++ b/templates/job-detail.html
@@ -5,6 +5,7 @@
 <html lang="en">
     <body>
         {% block body_block %}
+        <div class="job-detail-page">
         <style>
             body, html {
                 height: 100%;
@@ -33,17 +34,18 @@
                 height: 100%;
                 padding: 2em;
                 border-left: 1px solid #dcdcdc;
-                width: 30%;
+                width: 20%;
                 max-width: 300px;          
             }
             .review-section {
-                background-color: #f5f5f5; /* Background color for the entire review section */
+                background-color: rgba(255, 255, 255, 0.6); /* Background color for the entire review section */
                 padding: 20px;
                 border-radius: 10px;
                 
             }
             .review-form {
                 margin: 20px;
+        
                 
             }
             .star-container {
@@ -300,8 +302,8 @@
                   </div>
                 </div>
               </div>
-
         </div>
+    </div>
 
 
 
