--- a/templates/base.html
+++ b/templates/base.html
@@ -1,3 +1,6 @@
+{% load static %}
+
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -12,10 +15,17 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css">
+
+    
     <style>
         main {
             padding-top: 120px;
             /* Adjust the padding to match the height of your fixed header */
+        }
+        body {
+            background: url("{% static 'image\background.jpg' %}") center center fixed;
+            background-color: hsla(0, 7%, 94%, 0.685); 
+            background-size: cover;
         }
 
         header {
@@ -26,6 +36,79 @@
             z-index: 1000;
             /* Make sure the header is on top of other elements */
         }
+
+        .sorted-bar {
+                display: flex;
+                justify-content: space-evenly;
+                align-items: center;
+                margin-block: 10px 20px;
+            } 
+            .btn {
+                background-color: #f4511e;
+  
+                color: white;
+                text-align: center;
+                font-size: 18px;
+                opacity: 0.6;
+                transition: 0.1s;
+                display: inline-block;
+                text-decoration: none;
+                cursor: pointer;
+
+                margin: 10px;
+                padding: 10px;
+                border: 1px solid #463d26;
+                box-shadow: 0 0 5px rgb(176, 176, 176);
+            }
+            .btn:hover {opacity: 1}
+
+            .job-listing {
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+                
+            }
+
+            .job {
+                justify-content: center;
+                border: 1px solid #dcdcdc;
+                margin-block: 10px 10px;
+                padding: 20px;
+                border-radius: 10px;
+                box-shadow: 0 0 5px rgb(166, 166, 166);
+                word-wrap: break-word;  /* Wrap long words onto the next line */
+                overflow: hidden;      /* Hide overflowing content */
+                text-overflow: ellipsis; 
+                background-color: rgba(255, 255, 255, 0.5); 
+                backdrop-filter: blur(10px);
+            }
+
+            .job-link {
+                text-decoration: none;
+                /* Remove underline by default */
+                color: #474747;
+                /* Set your preferred color */
+            }
+
+            .job-link:hover h3 {
+                text-decoration: underline;
+                /* Add underline to h3 on hover over the block */
+            }
+
+            .job-detail {
+                display: flex;
+                justify-content: space-between;
+                flex-wrap: wrap;
+                padding-right: 10%;
+            }
+
+            .job-detail-page {
+                background-color: rgba(255, 255, 255, 0.6); /* White background with 0.8 opacity for the blur effect */
+                backdrop-filter: blur(5px); /* Adjust the blur radius as needed */
+                padding: 25px; /* Add some padding for content readability */
+                border-radius: 15px;
+            }
     </style>
 </head>
 
@@ -45,8 +128,13 @@
                     <div class="dropdown text-end">
                         <a href="#" class="d-block link-body-emphasis text-decoration-none dropdown-toggle"
                             data-bs-toggle="dropdown" aria-expanded="false">
-                            <img src="https://github.com/mdo.png" alt="mdo" width="32" height="32"
-                                class="rounded-circle">
+                            {% if user.type == 2 %}
+                                <!-- Employer default photo -->
+                                <img src="{% static 'image/employer.png' %}" alt="employer" width="32" height="32" class="rounded-circle">
+                            {% else %}
+                                <!-- Job seeker default photo -->
+                                <img src="{% static 'image/user.png' %}" alt="user" width="32" height="32" class="rounded-circle">
+                            {% endif %}
                         </a>
                         <ul class="dropdown-menu text-small">
                             {% if user.type == 1 %}
